fix(86ewtc013): implement fix for jumpy layout due to scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,7 @@ html {
     min-height: 100%;
     font-size: 62.5%;
     overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 body,
@@ -32,6 +33,7 @@ html,
 }
 
 body {
+    overflow-y: scroll;
     @include mat.all-component-themes($neonum-theme);
     background-color: var(--nn-bg);
     color: var(--nn-text);
